Prevent deprecation for DBCP2 username and password properties
Closes gh-40076